test/localeModels/nspark/loc-in-locales.good
loc-in-locales.chpl:3: error: Variables can't be declared using not-fully-instantiated generic types like 'channel'
